# ChangeLog for media-video/mpeg4ip
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mpeg4ip/ChangeLog,v 1.36 2006/05/26 00:42:46 tester Exp $

  26 May 2006; Olivier Crête <tester@gentoo.org>
  -files/mpeg4ip-1.1-gcc3.4.patch, -files/mpeg4ip-1.1-gentoo-fixes.patch,
  -mpeg4ip-1.1.ebuild:
  cleanup

  26 May 2006; Olivier Crête <tester@gentoo.org>
  -files/mpeg4ip-1.1-gcc3.4.patch, -files/mpeg4ip-1.1-gentoo-fixes.patch,
  -mpeg4ip-1.1.ebuild:
  cleanup

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> mpeg4ip-1.4.1.ebuild:
  Stable on x86 wrt bug #133605.

*mpeg4ip-1.5 (12 May 2006)

  12 May 2006; Olivier Crête <tester@gentoo.org> +mpeg4ip-1.5.ebuild:
  Version bump

*mpeg4ip-1.4.1-r1 (08 Apr 2006)

  08 Apr 2006; Olivier Crête <tester@gentoo.org> mpeg4ip-1.4.1.ebuild,
  +mpeg4ip-1.4.1-r1.ebuild:
  Removed faac/x264-svn dep and marked stable, made new revision with unstable
  deps

  23 Mar 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  mpeg4ip-1.4.1.ebuild:
  mark ~ppc (Bug #124693)

  20 Dec 2005; Olivier Crête <tester@gentoo.org>
  +files/mpeg4ip-1.4.1-disable-faac-test.patch, mpeg4ip-1.4.1.ebuild:
  Remove check for faac and make appropriate dep instead

  20 Dec 2005; Olivier Crête <tester@gentoo.org>
  +files/mpeg4ip-1.4.1-gcc41.patch, mpeg4ip-1.1.ebuild, -mpeg4ip-1.3.ebuild,
  mpeg4ip-1.4.1.ebuild:
  Make 1.4.1 depend on media-libs/libmp4v2 and not provide it, block it from 1.1,
  add --with-pics to 1.1 to make it build on amd64, add gcc 4.1 patch to 1.4.1

  19 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> mpeg4ip-1.4.1.ebuild:
  Move block on pre-r8 versions of faad2, that now depends on this.

  19 Nov 2005; Olivier Crête <tester@gentoo.org> mpeg4ip-1.4.1.ebuild:
  Stripped -Werror, fixes bug #97936

*mpeg4ip-1.4.1 (11 Nov 2005)

  11 Nov 2005; Olivier Crête <tester@gentoo.org> -mpeg4ip-1.4.ebuild,
  +mpeg4ip-1.4.1.ebuild:
  Version bump
