@@ -1,0 +1,3 @@
+MD5 f53b06c62e914ab724bda9d9af041e08 mpeg4ip-1.5.0.1.tar.gz 4826180
+RMD160 fee5c21c17a470e6de349e07d233a1eb46b2064a mpeg4ip-1.5.0.1.tar.gz 4826180
+SHA256 23535dd818898ec75ffa0df22d9f27189e77361ce8a500d58328073ee247bcb6 mpeg4ip-1.5.0.1.tar.gz 4826180
