@@ -1,6 +1,12 @@
 # ChangeLog for media-video/mpeg4ip
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mpeg4ip/ChangeLog,v 1.36 2006/05/26 00:42:46 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mpeg4ip/ChangeLog,v 1.37 2006/06/27 12:44:19 tester Exp $
+
+*mpeg4ip-1.5.0.1 (27 Jun 2006)
+
+  27 Jun 2006; Olivier Crête <tester@gentoo.org> -mpeg4ip-1.5.ebuild,
+  +mpeg4ip-1.5.0.1.ebuild:
+  Version bump
 
   26 May 2006; Olivier Crête <tester@gentoo.org>
   -files/mpeg4ip-1.1-gcc3.4.patch, -files/mpeg4ip-1.1-gentoo-fixes.patch,
